[gd_scene load_steps=9 format=3 uid="uid://bcke0u656vo6a"]

[ext_resource type="Script" uid="uid://c8acslwa3uq2b" path="res://hazards/stationary/bumper_hazard.gd" id="1_0qb04"]
[ext_resource type="Texture2D" uid="uid://mtvfat8p105y" path="res://assets/Sprites/Bumper.png" id="1_vvfej"]
[ext_resource type="AudioStream" uid="uid://cdus7pwqana1m" path="res://assets/sounds/Boing.wav" id="3_ydhfi"]

[sub_resource type="Animation" id="Animation_ydhfi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BumperSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0qb04"]
resource_name = "bump"
length = 0.400007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BumperSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hugcm"]
_data = {
&"RESET": SubResource("Animation_ydhfi"),
&"bump": SubResource("Animation_0qb04")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vvfej"]
radius = 16.1245

[sub_resource type="CircleShape2D" id="CircleShape2D_0qb04"]
radius = 25.02

[node name="BumperHazard" type="Node2D"]
script = ExtResource("1_0qb04")

[node name="BumperSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_vvfej")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hugcm")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_vvfej")

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("CircleShape2D_0qb04")

[node name="DisableInputTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ydhfi")
max_distance = 100.0
bus = &"SFX"

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="timeout" from="DisableInputTimer" to="." method="_on_disable_input_timer_timeout"]
